# Compiler-Generator

./: .gitignore  CFGRules.txt  CMakeLists.txt  drivation.txt  flex.l  input.txt  main.cpp  parser.cpp  parser.h
AutomatonDataStructure/: Automaton.cpp  Automaton.h  CombinedAutomaton.cpp  CombinedAutomaton.h  Node.cpp  Node.h  automatonGenerator.cpp  automatonGenerator.h
CFGParser/: CFG.cpp  CFG.h  CFGParser.cpp  CFGParser.h
CodeParser/: CodeParser.cpp  CodeParser.h
LexicalAnalyzer/: LexicalAnalyzer.cpp  LexicalAnalyzer.h
NFADFAConverter/: NFADFAConverter.cpp  NFADFAConverter.h
Parser/: Parser.cpp  Parser.h
ParsingInputFile/: parser.cpp  parser.h
Postfix-expression/: Postfix_expression.cpp  Postfix_expression.h
sample_programs/: p1.txt  p2.txt  p2_out.txt  p3.txt  p3_out.txt
table/: .~lock.CFGRules.csv#  CFGRules.csv  Table.cpp  Table.h
tablePreparation/: FirstCalculation.cpp  FirstCalculation.h  FollowCalculation.cpp  FollowCalculation.h
